objects/User.object
<CustomObject>
    <fields>
        <fullName>Activity_Indicator__c</fullName>
        <description>Used in Process Builder to default the users activities.</description>
        <inlineHelpText>The &quot;Internal Only&quot; checkbox is checked by default on activities for Internal users.  If the value of &quot;Public&quot; is chosen, the checkbox will unchecked upon save.</inlineHelpText>
        <label>Activity Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                    <default>true</default>
                    <label>Private</label>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <description>Agent ID for CTI call routing</description>
        <externalId>true</externalId>
        <label>Agent ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Sales_Manager__c</fullName>
        <label>Area Sales Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beth Umphress</fullName>
                </value>
                <value>
                    <fullName>Bill Shine</fullName>
                </value>
                <value>
                    <fullName>Brad Fest</fullName>
                </value>
                <value>
                    <fullName>Brad Fletcher</fullName>
                </value>
                <value>
                    <fullName>Brian Taylor</fullName>
                </value>
                <value>
                    <fullName>Charles Hofer</fullName>
                </value>
                <value>
                    <fullName>Dan Finnerty</fullName>
                </value>
                <value>
                    <fullName>Daniel Klema</fullName>
                </value>
                <value>
                    <fullName>Dari Brown</fullName>
                </value>
                <value>
                    <fullName>David Moore</fullName>
                </value>
                <value>
                    <fullName>David Newsom</fullName>
                </value>
                <value>
                    <fullName>Doug Krull</fullName>
                </value>
                <value>
                    <fullName>Fred Martsolf</fullName>
                </value>
                <value>
                    <fullName>Greg Gniffke</fullName>
                </value>
                <value>
                    <fullName>James Hitchcock</fullName>
                </value>
                <value>
                    <fullName>James Jarvis</fullName>
                </value>
                <value>
                    <fullName>Jeff Peterson</fullName>
                </value>
                <value>
                    <fullName>Jerome Booren</fullName>
                </value>
                <value>
                    <fullName>Jim Jackson</fullName>
                </value>
                <value>
                    <fullName>Kent Hamilton</fullName>
                </value>
                <value>
                    <fullName>Kevin Adams</fullName>
                </value>
                <value>
                    <fullName>Kevin Hoepker</fullName>
                </value>
                <value>
                    <fullName>Lanny Hillyard</fullName>
                </value>
                <value>
                    <fullName>Mark Stehno</fullName>
                </value>
                <value>
                    <fullName>Mike Fordyce</fullName>
                </value>
                <value>
                    <fullName>Paul Homb</fullName>
                </value>
                <value>
                    <fullName>Randy Samko</fullName>
                </value>
                <value>
                    <fullName>Scott Phillips</fullName>
                </value>
                <value>
                    <fullName>Todd Clevenger</fullName>
                </value>
                <value>
                    <fullName>Matthew Lund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cattle_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie Admin focus for user is Cattle &gt; User should belong to Admin Public Groups and Permission Sets related to Cattle if this checkbox is selected</description>
        <label>Cattle Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cattle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie focus for user is Cattle &gt; User should belong to Public Groups related to Cattle if this checkbox is selected</description>
        <label>Cattle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Ops_Area_Service_Manager__c</fullName>
        <description>Area Service Manager for Customer Ops</description>
        <label>Customer Ops Area Service Manager</label>
        <relationshipName>Customer_Ops_Area_Service_Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Customer_Ops_Region__c</fullName>
        <description>Field to capture the region to which this User is assigned.</description>
        <label>Customer Ops Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Great East</fullName>
                </value>
                <value>
                    <fullName>Great West</fullName>
                </value>
                <value>
                    <fullName>South Central</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Upper Midwest</fullName>
                </value>
                <value>
                    <fullName>West Coast</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>EDI - Farm and Ranch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dairy_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie Admin focus for user is Dairy &gt; User should belong to Admin Public Groups and Permission Sets related to Dairy if this checkbox is selected</description>
        <label>Dairy Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dairy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie focus for user is Dairy &gt; User should belong to Public Groups related to Dairy if this checkbox is selected</description>
        <label>Dairy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deer_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie Admin focus for user is Deer &gt; User should belong to Admin Public Groups and Permission Sets related to Deer if this checkbox is selected</description>
        <label>Deer Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie focus for user is Deer &gt; User should belong to Public Groups related to Deer if this checkbox is selected</description>
        <label>Deer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_AB__c</fullName>
        <description>Employee AB Number</description>
        <label>Employee AB #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number_Match__c</fullName>
        <description>Indicates whether the two employee number fields match or not.</description>
        <formula>If( EmployeeNumber = Text(Employee_Number__c) ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Employee Number Match</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <externalId>true</externalId>
        <label>Employee Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FastFieldUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the Fast Field Forms app to filter users on account teams who are Fast Field Forms users</description>
        <label>Is Fast Field Forms User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Name_Sales_Division__c</fullName>
        <formula>Full_Name__c &amp;&quot; || &quot;&amp;  text(Sales_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name || Sales Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp;&quot; &quot;&amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <description>Function of user.</description>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Animal Milk General Manager</fullName>
                </value>
                <value>
                    <fullName>Animal Milk Marketing</fullName>
                </value>
                <value>
                    <fullName>Animal Milk Nutrition Services</fullName>
                </value>
                <value>
                    <fullName>Animal Milk Sales</fullName>
                </value>
                <value>
                    <fullName>Area Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Assoc. Area Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Chatter Free</fullName>
                </value>
                <value>
                    <fullName>Customer Operations</fullName>
                </value>
                <value>
                    <fullName>Dealer Business Dev Manager</fullName>
                </value>
                <value>
                    <fullName>Dealer Business Dev Specialist</fullName>
                </value>
                <value>
                    <fullName>Dealer Community Support</fullName>
                </value>
                <value>
                    <fullName>Director, Nutrition/Research for Upper Midwest</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Farm VIP</fullName>
                </value>
                <value>
                    <fullName>Formulation and Technology Manager</fullName>
                </value>
                <value>
                    <fullName>Income Optimization</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Inside Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Intern 2017</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>IT AOM</fullName>
                </value>
                <value>
                    <fullName>IT Delivery Team</fullName>
                </value>
                <value>
                    <fullName>IT Integration</fullName>
                </value>
                <value>
                    <fullName>Latin America Manager</fullName>
                </value>
                <value>
                    <fullName>Latin America Marketing</fullName>
                </value>
                <value>
                    <fullName>Latin America Sales</fullName>
                </value>
                <value>
                    <fullName>LPS</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Horse_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie Admin focus for user is Horse &gt; User should belong to Admin Public Groups and Permission Sets related to Horse if this checkbox is selected</description>
        <label>Horse Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Horse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie focus for user is Horse &gt; User should belong to Public Groups related to Horse if this checkbox is selected</description>
        <label>Horse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LPS_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this user is a manager of an LPS.</description>
        <label>LPS Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_s_Function__c</fullName>
        <formula>Text(Manager.Function__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager&apos;s Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes</description>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Partner_User__c</fullName>
        <formula>If(Contains(Profile.Name, &quot;Partner&quot;), &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Change_Date__c</fullName>
        <description>Date the user&apos;s profile changed.    This field is populated by workflow.</description>
        <label>Profile Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Profile_Changed_By__c</fullName>
        <description>Who changed the user&apos;s profile?</description>
        <label>Profile Changed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Current__c</fullName>
        <description>The Profile Current field  is  populated by workflow.    This field is populated by workflow.</description>
        <label>Profile Current</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Previous__c</fullName>
        <description>Previous profile</description>
        <label>Profile Previous</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Change_Date__c</fullName>
        <description>The date user&apos;s role changed.  This field is populated by workflow.</description>
        <label>Role Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role_Changed_By__c</fullName>
        <description>Who changed this users role?    This field is populated by workflow.</description>
        <label>Role Changed By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Current__c</fullName>
        <description>The Role Current field is populated by workflow.</description>
        <label>Role Current</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Previous__c</fullName>
        <description>Previous role.    This field is populated by workflow.</description>
        <label>Role Previous</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Indicator__c</fullName>
        <formula>if( text(Sales_Division__c) = text( $User.Sales_Division__c) ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Area Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <description>Sales District from Sales Assignment hierarchy.</description>
        <label>Sales District</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>District - 10000</fullName>
                </value>
                <value>
                    <fullName>District - 14100</fullName>
                </value>
                <value>
                    <fullName>District - 14118</fullName>
                </value>
                <value>
                    <fullName>District - 14120</fullName>
                </value>
                <value>
                    <fullName>District - 14122</fullName>
                </value>
                <value>
                    <fullName>District - 14124</fullName>
                </value>
                <value>
                    <fullName>District - 14126</fullName>
                </value>
                <value>
                    <fullName>District - 14128</fullName>
                </value>
                <value>
                    <fullName>District - 14130</fullName>
                </value>
                <value>
                    <fullName>District - 14136</fullName>
                </value>
                <value>
                    <fullName>District - 14138</fullName>
                </value>
                <value>
                    <fullName>District - 14139</fullName>
                </value>
                <value>
                    <fullName>District - 14141</fullName>
                </value>
                <value>
                    <fullName>District - 14143</fullName>
                </value>
                <value>
                    <fullName>District - 14144</fullName>
                </value>
                <value>
                    <fullName>District - 14146</fullName>
                </value>
                <value>
                    <fullName>District - 14148</fullName>
                </value>
                <value>
                    <fullName>District - 14149</fullName>
                </value>
                <value>
                    <fullName>District - 14200</fullName>
                </value>
                <value>
                    <fullName>District - 14201</fullName>
                </value>
                <value>
                    <fullName>District - 14203</fullName>
                </value>
                <value>
                    <fullName>District - 14205</fullName>
                </value>
                <value>
                    <fullName>District - 14207</fullName>
                </value>
                <value>
                    <fullName>District - 14208</fullName>
                </value>
                <value>
                    <fullName>District - 14209</fullName>
                </value>
                <value>
                    <fullName>District - 14210</fullName>
                </value>
                <value>
                    <fullName>District - 14211</fullName>
                </value>
                <value>
                    <fullName>District - 14226</fullName>
                </value>
                <value>
                    <fullName>District - 14236</fullName>
                </value>
                <value>
                    <fullName>District - 14238</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Division__c</fullName>
        <description>Sales Division from Sales Assignment hierarchy.</description>
        <label>Sales Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animal Milk Products</fullName>
                </value>
                <value>
                    <fullName>Central &amp; South America</fullName>
                </value>
                <value>
                    <fullName>Central Mexico</fullName>
                </value>
                <value>
                    <fullName>Dealer Business Dev</fullName>
                </value>
                <value>
                    <fullName>Feed</fullName>
                </value>
                <value>
                    <fullName>Great Lakes Dairy</fullName>
                </value>
                <value>
                    <fullName>Great Lakes Lifestyle</fullName>
                </value>
                <value>
                    <fullName>Great Lakes Swine</fullName>
                </value>
                <value>
                    <fullName>Great West</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Heartland</fullName>
                </value>
                <value>
                    <fullName>I-29 Dakota CBD</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Keystone Dairy</fullName>
                </value>
                <value>
                    <fullName>Lab Diet</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Mid_South Lifestyle</fullName>
                    <label>Mid-South Lifestyle</label>
                </value>
                <value>
                    <fullName>Midwest Lifestyle</fullName>
                </value>
                <value>
                    <fullName>Milk Products</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>National Dairy</fullName>
                </value>
                <value>
                    <fullName>National Retail Exotics</fullName>
                </value>
                <value>
                    <fullName>National Swine &amp; Poultry</fullName>
                </value>
                <value>
                    <fullName>New York Dairy</fullName>
                </value>
                <value>
                    <fullName>North Central</fullName>
                </value>
                <value>
                    <fullName>Northeast Lifestyle</fullName>
                </value>
                <value>
                    <fullName>Northern Mexico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <description>Sales Region from Sales Assignment hierarchy.</description>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CBD</fullName>
                </value>
                <value>
                    <fullName>Corp IT</fullName>
                </value>
                <value>
                    <fullName>Dealer Business Dev</fullName>
                </value>
                <value>
                    <fullName>Feed</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Milk Replacer Enterprise</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>National Retail Exotics</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Southern</fullName>
                </value>
                <value>
                    <fullName>Upper Midwest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Team_ID__c</fullName>
        <description>Sales Team ID</description>
        <label>Sales Team ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <description>Sales Territory from Sales Assignment hierarchy.</description>
        <label>Sales Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Territory - 1000000</fullName>
                </value>
                <value>
                    <fullName>Territory - 1410000</fullName>
                </value>
                <value>
                    <fullName>Territory - 1411801</fullName>
                </value>
                <value>
                    <fullName>Territory - 1412000</fullName>
                </value>
                <value>
                    <fullName>Territory - 1412200</fullName>
                </value>
                <value>
                    <fullName>Territory - 1412400</fullName>
                </value>
                <value>
                    <fullName>Territory - 1412600</fullName>
                </value>
                <value>
                    <fullName>Territory - 1412601</fullName>
                </value>
                <value>
                    <fullName>Territory - 1412602</fullName>
                </value>
                <value>
                    <fullName>Territory - 1412800</fullName>
                </value>
                <value>
                    <fullName>Territory - 1413000</fullName>
                </value>
                <value>
                    <fullName>Territory - 1413600</fullName>
                </value>
                <value>
                    <fullName>Territory - 1413602</fullName>
                </value>
                <value>
                    <fullName>Territory - 1413800</fullName>
                </value>
                <value>
                    <fullName>Territory - 1413900</fullName>
                </value>
                <value>
                    <fullName>Territory - 1414100</fullName>
                </value>
                <value>
                    <fullName>Territory - 1414300</fullName>
                </value>
                <value>
                    <fullName>Territory - 1414400</fullName>
                </value>
                <value>
                    <fullName>Territory - 1414600</fullName>
                </value>
                <value>
                    <fullName>Territory - 1414800</fullName>
                </value>
                <value>
                    <fullName>Territory - 1414900</fullName>
                </value>
                <value>
                    <fullName>Territory - 1420000</fullName>
                </value>
                <value>
                    <fullName>Territory - 1420100</fullName>
                </value>
                <value>
                    <fullName>Territory - 1420101</fullName>
                </value>
                <value>
                    <fullName>Territory - 1420300</fullName>
                </value>
                <value>
                    <fullName>Territory - 1420303</fullName>
                </value>
                <value>
                    <fullName>Territory - 1420500</fullName>
                </value>
                <value>
                    <fullName>Territory - 1420700</fullName>
                </value>
                <value>
                    <fullName>Territory - 1420701</fullName>
                </value>
                <value>
                    <fullName>Territory - 1420704</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected_Management_Tips__c</fullName>
        <description>This field will hold the selected management tips that user selects to send through email.</description>
        <label>Selected Management Tips</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Cattle_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie Admin focus for user is Show - Cattle &gt; User should belong to Admin Public Groups and Permission Sets related to Show - Cattle if this checkbox is selected</description>
        <label>Show - Cattle Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Cattle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie focus for user is Show - Cattle &gt; User should belong to Public Groups related to Show - Cattle if this checkbox is selected</description>
        <label>Show - Cattle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Goat_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie Admin focus for user is Show - Goat &gt; User should belong to Admin Public Groups and Permission Sets related to Show - Goat if this checkbox is selected</description>
        <label>Show - Goat Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Goat__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie focus for user is Show - Goat &gt; User should belong to Public Groups related to Show - Goat if this checkbox is selected</description>
        <label>Show - Goat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Lamb_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie Admin focus for user is Show - Lamb &gt; User should belong to Admin Public Groups and Permission Sets related to Show - Lamb if this checkbox is selected</description>
        <label>Show - Lamb Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Lamb__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie focus for user is Show - Lamb &gt; User should belong to Public Groups related to Show - Lamb if this checkbox is selected</description>
        <label>Show - Lamb</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Swine_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie Admin focus for user is Show - Swine &gt; User should belong to Admin Public Groups and Permission Sets related to Show - Swine if this checkbox is selected</description>
        <label>Show - Swine Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Swine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specie focus for user is Show - Swine &gt; User should belong to Public Groups related to Show - Swine if this checkbox is selected</description>
        <label>Show - Swine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <description>The date the users status changed.    This field is populated by workflow.</description>
        <label>Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Changed_By__c</fullName>
        <description>Who changed the user&apos;s status?    This field is populated by workflow.</description>
        <label>Status Changed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Current__c</fullName>
        <description>The Status Curent field  is populated by workflow.    This field is populated by workflow.</description>
        <label>Status Current</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Previous__c</fullName>
        <description>What was the user&apos;s previous status?    This field is populated by workflow.</description>
        <label>Status Previous</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <description>Date the user was trained on Salesforce.com</description>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
</CustomObject>